--- a/Problème 2 avec Yahoo.ipynb
+++ b/Problème 2 avec Yahoo.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 96,
    "id": "a9c5e07a",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 97,
    "id": "ea2fbe21",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 98,
    "id": "a69e335f",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 99,
    "id": "4df275de",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 100,
    "id": "de563139",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
     }
    ],
    "source": [
-    "# GRAPHIQUES DES SÉRIES CHRONOLOGIQUES DES PRIX\n",
+    "# Problème 2 a. GRAPHIQUES DES SÉRIES CHRONOLOGIQUES DES PRIX\n",
     "print(\"\\n=== GRAPHIQUES DES SÉRIES CHRONOLOGIQUES ===\\n\")\n",
     "\n",
     "# 1. Graphique des prix ajustés\n",
@@ -495,12 +495,13 @@
     "    ax.tick_params(axis='x', rotation=45)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 101,
    "id": "a2c835ce",
    "metadata": {},
    "outputs": [
@@ -567,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 102,
    "id": "5b971894",
    "metadata": {},
    "outputs": [
@@ -678,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 103,
    "id": "1300747d",
    "metadata": {},
    "outputs": [
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 104,
    "id": "6d58ed6f",
    "metadata": {},
    "outputs": [
@@ -1030,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "id": "5e0550de",
    "metadata": {},
    "outputs": [
@@ -1122,16 +1123,16 @@
       "\n",
       "=== TABLEAU DE SYNTHÈSE DU TEST DE COUVERTURE ===\n",
       "\n",
-      "Ticker          Modèle  Taux_Empirique_%  Statistique_S Rejet_H0\n",
-      "   SPY      Historique             5.022          0.052      Non\n",
-      "   SPY        Gaussien             4.444         -1.343      Non\n",
-      "   SPY Récursif (EWMA)             5.455          1.099      Non\n",
-      " GOOGL      Historique             5.022          0.052      Non\n",
-      " GOOGL        Gaussien             4.227         -1.866      Non\n",
-      " GOOGL Récursif (EWMA)             4.805         -0.471      Non\n",
-      "   EOG      Historique             5.022          0.052      Non\n",
-      "   EOG        Gaussien             3.649         -3.262      Oui\n",
-      "   EOG Récursif (EWMA)             4.805         -0.471      Non\n"
+      "Ticker          Modèle  Violations_Obs  Violations_Att  Taux_Empirique_%  Statistique_S Rejet_H0\n",
+      "   SPY      Historique             139           138.4             5.022          0.052      Non\n",
+      "   SPY        Gaussien             123           138.4             4.444         -1.343      Non\n",
+      "   SPY Récursif (EWMA)             151           138.4             5.455          1.099      Non\n",
+      " GOOGL      Historique             139           138.4             5.022          0.052      Non\n",
+      " GOOGL        Gaussien             117           138.4             4.227         -1.866      Non\n",
+      " GOOGL Récursif (EWMA)             133           138.4             4.805         -0.471      Non\n",
+      "   EOG      Historique             139           138.4             5.022          0.052      Non\n",
+      "   EOG        Gaussien             101           138.4             3.649         -3.262      Oui\n",
+      "   EOG Récursif (EWMA)             133           138.4             4.805         -0.471      Non\n"
      ]
     }
    ],
@@ -1219,6 +1220,8 @@
     "        {\n",
     "            'Ticker': ticker,\n",
     "            'Modèle': 'Historique',\n",
+    "            'Violations_Obs': num_violations_hist,\n",
+    "            'Violations_Att': round(expected_violations, 1),\n",
     "            'Taux_Empirique_%': num_violations_hist/T*100,\n",
     "            'Statistique_S': S_hist,\n",
     "            'Rejet_H0': 'Oui' if reject_hist else 'Non'\n",
@@ -1226,6 +1229,8 @@
     "        {\n",
     "            'Ticker': ticker,\n",
     "            'Modèle': 'Gaussien',\n",
+    "            'Violations_Obs': num_violations_gauss,\n",
+    "            'Violations_Att': round(expected_violations, 1),\n",
     "            'Taux_Empirique_%': num_violations_gauss/T*100,\n",
     "            'Statistique_S': S_gauss,\n",
     "            'Rejet_H0': 'Oui' if reject_gauss else 'Non'\n",
@@ -1233,6 +1238,8 @@
     "        {\n",
     "            'Ticker': ticker,\n",
     "            'Modèle': 'Récursif (EWMA)',\n",
+    "            'Violations_Obs': num_violations_recursive,\n",
+    "            'Violations_Att': round(expected_violations_recursive, 1),\n",
     "            'Taux_Empirique_%': num_violations_recursive/T_recursive*100,\n",
     "            'Statistique_S': S_recursive,\n",
     "            'Rejet_H0': 'Oui' if reject_recursive else 'Non'\n",
@@ -1247,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "id": "6fc18e39",
    "metadata": {},
    "outputs": [
@@ -1279,6 +1286,29 @@
       "  Séquences attendues: 236.1\n",
       "  Statistique Z: -4.613\n",
       "  P-value: 0.0000\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 151\n",
+      "  Séquences observées: 281\n",
+      "  Séquences attendues: 286.5\n",
+      "  Statistique Z: -0.927\n",
+      "  P-value: 0.3537\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== GOOGL (Secteur technologique) ===\n",
+      "VaR Historique:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 139\n",
+      "  Séquences observées: 245\n",
+      "  Séquences attendues: 265.0\n",
+      "  Statistique Z: -3.900\n",
+      "  P-value: 0.0001\n",
       "  Rejet H0: Oui\n",
       "  Interprétation: Regroupement significatif\n",
       "\n",
@@ -1348,6 +1378,73 @@
       "  Rejet H0: Oui\n",
       "  Interprétation: Regroupement significatif\n",
       "\n",
+      "VaR Gaussienne:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 117\n",
+      "  Séquences observées: 211\n",
+      "  Séquences attendues: 225.1\n",
+      "  Statistique Z: -3.201\n",
+      "  P-value: 0.0014\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 133\n",
+      "  Séquences observées: 259\n",
+      "  Séquences attendues: 254.2\n",
+      "  Statistique Z: 0.891\n",
+      "  P-value: 0.3729\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== EOG (Secteur énergétique) ===\n",
+      "VaR Historique:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 139\n",
+      "  Séquences observées: 252\n",
+      "  Séquences attendues: 265.0\n",
+      "  Statistique Z: -2.503\n",
+      "  P-value: 0.0123\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Gaussienne:\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 101\n",
+      "  Séquences observées: 183\n",
+      "  Séquences attendues: 195.6\n",
+      "  Statistique Z: -3.287\n",
+      "  P-value: 0.0010\n",
+      "  Rejet H0: Oui\n",
+      "  Interprétation: Regroupement significatif\n",
+      "\n",
+      "VaR Récursive (EWMA):\n",
+      "  Observations totales: 2,768\n",
+      "  Violations: 133\n",
+      "  Séquences observées: 248\n",
+      "  Séquences attendues: 254.2\n",
+      "  Statistique Z: -1.190\n",
+      "  P-value: 0.2339\n",
+      "  Rejet H0: Non\n",
+      "  Interprétation: Pas de regroupement significatif\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "\n",
+      "=== TABLEAU DE SYNTHÈSE DU TEST DE SÉQUENCES ===\n",
+      "\n",
+      "Ticker          Modèle  Violations  Séquences_Obs  Séquences_Att  Statistique_Z Rejet_H0\n",
+      "   SPY      Historique         139            239          265.0         -5.098      Oui\n",
+      "   SPY        Gaussien         123            215          236.1         -4.613      Oui\n",
+      "   SPY Récursif (EWMA)         151            281          286.5         -0.927      Non\n",
+      " GOOGL      Historique         139            245          265.0         -3.900      Oui\n",
+      " GOOGL        Gaussien         117            211          225.1         -3.201      Oui\n",
+      " GOOGL Récursif (EWMA)         133            259          254.2          0.891      Non\n",
+      "   EOG      Historique         139            252          265.0         -2.503      Oui\n",
+      "   EOG        Gaussien         101            183          195.6         -3.287      Oui\n",
+      "   EOG Récursif (EWMA)         133            248          254.2         -1.190      Non\n",
       "VaR Récursive (EWMA):\n",
       "  Observations totales: 2,768\n",
       "  Violations: 133\n",
