--- a/Problème 4.ipynb
+++ b/Problème 4.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "5395c659",
+   "metadata": {},
+   "source": [
+    "# Partie A.  Statistiques Descriptives et Normalité"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "2780e22d",
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "d840b61b",
    "metadata": {},
    "outputs": [
@@ -71,13 +79,13 @@
      "output_type": "stream",
      "text": [
       "Statistiques descriptives des rendements de GOOGL:\n",
-      "   Statistique       Valeur\n",
-      "0      Moyenne     0.000747\n",
-      "1   Écart-type     0.016827\n",
-      "2    Asymétrie     0.387521\n",
-      "3     Kurtosis     8.779184\n",
-      "4  Jarque-Bera  8921.965936\n",
-      "5   JB p-value     0.000000\n"
+      "     Statistique       Valeur\n",
+      "0        Moyenne     0.000747\n",
+      "1     Écart-type     0.016827\n",
+      "2      Asymétrie     0.387521\n",
+      "3  Aplatissement     8.779184\n",
+      "4    Jarque-Bera  8921.965936\n",
+      "5     JB p-value     0.000000\n"
      ]
     },
     {
@@ -144,7 +152,7 @@
     "jb_stat, jb_pvalue = stats.jarque_bera(returns)\n",
     "\n",
     "stats_df = pd.DataFrame({\n",
-    "    'Statistique': ['Moyenne', 'Écart-type', 'Asymétrie', 'Kurtosis', 'Jarque-Bera', 'JB p-value'],\n",
+    "    'Statistique': ['Moyenne', 'Écart-type', 'Asymétrie', 'Aplatissement', 'Jarque-Bera', 'JB p-value'],\n",
     "    'Valeur': [mean_return, std_return, skewness, kurt, jb_stat, jb_pvalue]\n",
     "})\n",
     "print(\"Statistiques descriptives des rendements de GOOGL:\")\n",
@@ -202,8 +210,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c20ba8af",
+   "metadata": {},
+   "source": [
+    "# Partie b. Fenêtre Mobile d'estimation de VaR"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "461af269",
    "metadata": {},
    "outputs": [
@@ -231,7 +247,7 @@
     }
    ],
    "source": [
-    "# --- Question 4(b): VaR Historique avec Fenêtre Mobile ---\n",
+    "\n",
     "\n",
     "# Paramètres\n",
     "window_size = 250\n",
@@ -286,6 +302,14 @@
     "print(f\"Nombre de violations attendues: {expected_violations_rolling:.2f}\")\n",
     "print(f\"Nombre de violations observées: {actual_violations_rolling}\")\n",
     "print(f\"Pourcentage de violations (hits): {violation_rate_rolling:.2%}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1309d2b1",
+   "metadata": {},
+   "source": [
+    "# Partie c. Fenêtre expansive d'estimation de VaR"
    ]
   },
   {
