--- a/Probleme 3.ipynb
+++ b/Probleme 3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "id": "575975a7",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
       "\n",
       "                              Moyenne  Écart-type  Asymétrie  \\\n",
       "Normale standard               0.0237      1.0044    -0.0191   \n",
-      "Student-t (df=3, normalisée)  -0.0320      0.8979    -0.2371   \n",
+      "Student-t (df=3, normalisée)  -0.0320      0.8979    -0.2372   \n",
       "\n",
       "                              Aplatissement (kurtosis)  \n",
       "Normale standard                                0.0188  \n",
@@ -51,7 +51,7 @@
     "from scipy.stats import skew, kurtosis\n",
     "\n",
     "# 1. Paramètres de simulation\n",
-    "n = 2500 # longueur des séries de rendements (déterminée de manière arbitraire)\n",
+    "n = 2500 # longueur des séries de rendements\n",
     "df = 3 # degrés de liberté pour la Student-t (mentionnée dans l'énoncé)\n",
     "np.random.seed(1) # Fixe la graine du générateur de nombres aléatoires pour que les résultats soient reproductibles (donc les mêmes à chaque exécution). Le nombre 1 a été choisi arbitrairement.\n",
     "\n",
@@ -69,7 +69,7 @@
     "    return {\n",
     "        \"Moyenne\": np.mean(data),\n",
     "        \"Écart-type\": np.std(data, ddof=1),\n",
-    "        \"Asymétrie\": skew(data),\n",
+    "        \"Asymétrie\": skew(data, bias=False),\n",
     "        \"Aplatissement (kurtosis)\": kurtosis(data, fisher=True)} # fisher=True pour obtenir l'excès de kurtosis\n",
     "\n",
     "stats_normal = summary_stats(returns_normal)\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "c06bafbc",
    "metadata": {},
    "outputs": [
@@ -148,16 +148,16 @@
     "# Méthodes de calcul VaR / ES\n",
     "# (i) Empirique\n",
     "def var_es_empirique(x, a=alpha):\n",
-    "    var_ = np.quantile(x, a)\n",
-    "    es_  = x[x <= var_].mean() if np.any(x <= var_) else np.nan\n",
+    "    var_ = np.quantile(x, a) # Calcule la VaR comme le quantile empirique de niveau a\n",
+    "    es_  = x[x <= var_].mean() if np.any(x <= var_) else np.nan # Moyenne des pertes dépassant la VaR\n",
     "    return var_, es_\n",
     "\n",
     "# (ii) Paramétrique gaussienne\n",
     "def var_es_gauss(x, a=alpha):\n",
-    "    mu, sig = np.mean(x), np.std(x, ddof=1)\n",
-    "    z = norm.ppf(a)\n",
-    "    var_ = mu + sig * z\n",
-    "    es_  = mu - sig * norm.pdf(z) / a\n",
+    "    mu, sig = np.mean(x), np.std(x, ddof=1) # Moyenne et écart-type de l’échantillon\n",
+    "    z = norm.ppf(a) # Quantile de la loi normale standard\n",
+    "    var_ = mu + sig * z # VaR = mu + sigma * z_alpha\n",
+    "    es_  = mu - sig * norm.pdf(z) / a #ES : mu - sigma * (densité du quantile) / alpha\n",
     "    return var_, es_\n",
     "\n",
     "# (iii) Paramétrique t (df connus)\n",
@@ -170,12 +170,14 @@
     "    mu, sig = np.mean(x), np.std(x, ddof=1)\n",
     "    q_y = t.ppf(a, df=df)       # quantile de Y\n",
     "    f_y = t.pdf(q_y, df=df)     # densité en q_y\n",
-    "    c = np.sqrt((df - 2) / df)  # normalise à Var=1\n",
+    "    c = np.sqrt((df - 2) / df)  # Facteur de normalisation pour obtenir une variance unitaire\n",
     "\n",
+    "    # Conversion du quantile et de l'ES en version \"standardisée\"\n",
     "    var_z = c * q_y\n",
     "    es_y  = - (df + q_y**2) / ((df - 1) * a) * f_y\n",
     "    es_z  = c * es_y\n",
     "\n",
+    "    # Recalage à la moyenne et à la variance empirique\n",
     "    var_ = mu + sig * var_z\n",
     "    es_  = mu + sig * es_z\n",
     "    return var_, es_\n",
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 79,
    "id": "49c8ac56",
    "metadata": {},
    "outputs": [
@@ -295,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 83,
    "id": "b5b1a67b",
    "metadata": {},
    "outputs": [
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "id": "079206ec",
    "metadata": {},
    "outputs": [
